cmake_minimum_required(VERSION 3.22)
project(list)

set(CMAKE_CXX_STANDARD 14)

add_executable(list 单链表.cpp)
add_executable(list-1 静态顺序表.cpp)
add_executable(list-2 双链表.cpp)
add_executable(stack 栈.cpp)
add_executable(stack-2 顺序队列.cpp)
add_executable(stack-3 链式队列.cpp)
add_executable(stack-4 括号匹配算法.cpp)
add_executable(list-3 逆波兰式.cpp)
add_executable(str 串.cpp)










